dist_man1_MANS=

if BUILD_AGROCOIND
  dist_man1_MANS+=agrocoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=agrocoin-qt.1
endif

if BUILD_AGROCOIN_CLI
  dist_man1_MANS+=agrocoin-cli.1
endif

if BUILD_AGROCOIN_TX
  dist_man1_MANS+=agrocoin-tx.1
endif

if ENABLE_WALLET
if BUILD_AGROCOIN_WALLET
  dist_man1_MANS+=agrocoin-wallet.1
endif
endif
